--- a/menuToggle/menu.css
+++ b/menuToggle/menu.css
@@ -7,10 +7,15 @@
 }
 
 #menu-container {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
     position: absolute;
     top: 5px;
     left: 5px;
     text-align: left;
+    z-index: 100;
 }
   
 #my-menu {
@@ -30,6 +35,7 @@ padding: 10px;
 box-shadow: rgb(64, 57, 64) 0px 2px 8px 1px;
 transition: ease-in-out(1s);
 text-align: center;
+z-index: 100;
 }
 
 
